<resources>
    <string name="app_name">Awesome Snooker Point Counter</string>
    <string name="Player1">Player One</string>
    <string name="Player2">Player Two</string>
    <string name="StatisticPlayerOne">15</string>
    <string name="StatisticPlayerTwo">99</string>
    <string name="Statistic">Ball statistic: </string>
    <string name="DefaultFramePoint">0</string>

    <string name="PlayerOneWin">Player 1 win</string>
    <string name="PlayerTwoWin">Player 2 win</string>
    <string name="Undo">Undo</string>
    <string name="ResetFrame">Reset frame</string>
    <string name="ResetAll">Reset all</string>
    <string name="Fault">Fault +1</string>
    <string name="LeftSeparator">(</string>
    <string name="RigthSeparator">)</string>

    <string name="content_desc_brownball">Press to add the brown ball value (4) to selected players points</string>
    <string name="content_desc_yellowball">Press to add the yellow ball value (2) to selected players points</string>
    <string name="content_desc_blackball">Press to add the black ball value (7) to selected players points</string>
    <string name="content_desc_pinkball">Press to add the pink ball value (6) to selected players points</string>
    <string name="content_desc_greenball">Press to add the green ball value (3) to selected players points</string>
    <string name="content_desc_blueball">Press to add the blue ball value (5) to selected players points</string>
    <string name="content_desc_redball">Press to add the red ball value (1) to selected players points</string>

</resources>
